--- a/style.css
+++ b/style.css
@@ -1,41 +1,148 @@
 body{
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     color: white;
+    font-size: 35px;
+    background-color:rgb(0, 0, 0);
+    text-align: center;
+}
+
+.header1 {
+    text-align: center;
+    font-size: 100px;
+    background-color: rgba(95, 35, 82, 0.459);
+    padding: 1px;
+    max-width: 100%;
+    max-height: 100%;
+}
+.fit {
+    max-width: 100%;
+    max-height: 100%;
+    border: 2px solid white;
+    margin: 20px 0px 20px 0px;
+  }
+
+.fit2 {
+    max-width: 95%;
+    max-height: 100%;
+    border: 2px solid white;
+    margin: 20px 0px 20px 0px;
+  }
+
+.button {
+    color: white;
+}
+
+.nav1, .nav2, .nav3, .nav4, .nav5 {
+    float: left;
+    width: 20%;
+    background-color: rgba(221, 155, 32, 0.767);
+    color: rgb(255, 255, 255);
+    text-align: center;
+    padding: 15px 0px 20px 0px; 
+
+}
+
+
+.left1 {
+    text-align: center;
+    float: left;
+    width: 49.8%;
+    background-color: rgba(89, 142, 202, 0.459);
+    border: 1px solid white;
+    margin: 20px 0px 0px;
+}
+.left1info {
+    text-align: left;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 23px;
+}
+
+.right1 {
+    text-align: center;
+    float: right;
+    width: 49.8%;
+    background-color: rgba(89, 142, 202, 0.459);
+    border: 1px solid white;
+    margin: 20px 0px 0px;
+
+}
+
+.right1info {
+    text-align: left;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 23px;
+}
+
+footer {
+    margin-top: 1%;
+    font-size: 15spx;
+}
+.bottom1 {
+    margin-top: 70%;
+    background-color: rgba(95, 35, 82, 0.459);
     font-size: 20px;
-    background-color:rgb(44, 27, 3);
+    text-align: left;
+    padding: 5px 25px 5px 25px;
+}
+
+.bottom2 {
+    margin-top: 5%;
+    background-color: rgba(95, 35, 82, 0.459);
+    font-size: 20px;
+    text-align: left;
+    padding: 5px 25px 5px 25px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 
-#welcome {
-    margin: 10px 20px 10px 20px;
-    font-size: 200px;
-    color:rgba(247, 231, 201, 0.801);
+.left2, .left3 {
+    text-align: center;
+    background-color: rgba(89, 142, 202, 0.459);
+    border: 1px solid white;
+    margin: 100px 0px 0px 0px;
 }
 
-li {
-    Text-align: left;
+.left2info, .left3info {
+    text-align: left;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 23px;
 }
 
-h2 {
-    color: rgba(247, 231, 201, 0.801);
+
+.right2, .right3 {
+    text-align: center;
+    background-color: rgba(89, 142, 202, 0.459);
+    border: 1px solid white;
+    margin: 20px 0px 0px;
+
 }
 
-.links{
-width: 400px; 
-height: 150px;
-border: 10px double rgba(255, 255, 255, 0.938);
-padding: 50px;
-margin: 10px 20px 10px 20px;
+.right2info, .right3info {
+    text-align: left;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 23px;
 }
 
-.best {
-    width: 700px;
-    border: 10px double rgba(255, 255, 255, 0.938);
-    padding: 50px;
-    margin: 10px 20px 10px 20px;  
+
+.center2, .center3 {
+    text-align: center;
+    background-color: rgba(216, 122, 14, 0.459);
+    border: 1px solid white;
+    margin: 20px 0px 0px 0px;
 }
 
-.best-pic {
-    border: solid 1px white;
+.center2info, .center3info {
+    text-align: left;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 23px;
+}
 
+#contact {
+    font-size: 35px;
 }
